--- a/patch/style.css
+++ b/patch/style.css
@@ -1,21 +1,55 @@
-
-body {
-    background-color: #454C73;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,200&display=swap');
+* {
+    font-family: 'poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-form {
+body {
+    background-color: #d1d1d1;
+    font-family: 'poppins',sans-serif;
+}
+html{
+    overflow: hidden;
+}
+/* ---NAVBAR--- */
+nav {
+    background:#11162D ;
+    height: 60px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    grid-gap: 28px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    box-shadow: #D0E4FF;
+}
+nav .toggle-sidebar {
+    font-size: 18px;
+    cursor: pointer;
+}
+nav .bx-menu {
+    color: #fff;
+}
+/* ---NAVBAR--- */
+/* ---LOGIN FORM--- */
+.login {
     position: absolute;
     width: 391px;
-    height: 610px;
+    height: 490px;
     left: 524px;
-    top: 10px;
-
-    background: #D9D9D9;
+    top: 50px;
+    box-shadow: 1px 1px 100px #129fc2;
+    background: #ffffff;
     border-radius: 10px;
 }
 h1{
     text-align: center;
-    font-family: fantasy;
+    font-family: 'poppins';
 }
+
 .mb-3 {
     padding-left: 30px;
     padding-right: 30px;
@@ -32,6 +66,7 @@ h1{
 .form-check {
     padding-left: 70px;
 }
+/* ---LOGIN FORM--- */
 /* --- SIDEBAR --- */
 #sidebar{
     position: fixed;
@@ -192,12 +227,67 @@ h1{
     font-weight: 700;
 }
 /* --- END SIDEBAR --- */
+
+/* ---CONTENT--- */
+#content {
+    position: relative;
+    width: calc(100% - 260px);
+    left: 260px;
+}
+
+/* --- MAIN --- */
+main {
+    width: 100%;
+    margin-left: 245px;
+    padding: 20px 20px 20px 20px;
+}
+
+main .info-data {
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: 20px;
+    padding: 20px;
+}
+
+main .info-data .card {
+    padding: 5px;
+    border-radius: 10px;
+    background: #454C73;
+    box-shadow: 2px 2px 2px #1d2727;
+}
+
+main .card .head {
+    color: #fff;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
+}
+
+main .card .head h2 {
+    font-size: 28px;
+    font-weight: 600;
+    position: relative;
+    top: 29px;
+}
+
+main .card .head .icon {
+    font-size: 70px;
+    opacity: calc(70%);
+}
+
+main .card .head .icon {
+    color: #fff;
+    float: right;
+    position: relative;
+    bottom: 45px;
+}
+/* ---END MAIN--- */
 #data-siswa {
     background-color: white;
     margin-top: 50px;
     margin-left: 270px;
     border-radius: 10px;
-
 }
 .table-data {
     margin-right: 50px;
@@ -209,4 +299,22 @@ h1{
 .click{
     position: relative;
     right: 47vh;
+}
+.tambah {
+    position: absolute;
+    width: 1160px;
+    height: 715px;
+    left: 270px;
+    top: 20px;
+    background: #ffffff;
+    border-radius: 10px;
+}
+.ngabsen {
+    position: absolute;
+    width: 1160px;
+    height: 715px;
+    left: 270px;
+    top: 20px;
+    background: #ffffff;
+    border-radius: 10px;
 }
