--- a/patch/style.css
+++ b/patch/style.css
@@ -14,7 +14,7 @@ html{
 }
 /* ---NAVBAR--- */
 nav {
-    background:#11162D ;
+    background:#838383 ;
     height: 60px;
     padding: 0 20px;
     display: flex;
@@ -33,14 +33,40 @@ nav .toggle-sidebar {
 nav .bx-menu {
     color: #fff;
 }
-/* ---NAVBAR--- */
+/* ---END NAVBAR--- */
+/* ---JAM DIGITAL--- */
+.jam-digital-malasngoding {
+    left: 50px;
+    top: 2px;
+    overflow: hidden;
+    padding: 10px;
+    position: absolute;
+  }
+  .kotak{
+    align-items: center;
+    float: left;
+    padding: 5px;
+  }
+  .jam-digital-malasngoding p {
+    color: #fff;
+    float: right;
+    font-size: 15px;
+    text-align: center;
+  }
+  .titik{
+    color: #fff;
+    float: right;
+    font-size: 15px;
+    text-align: center;
+  }
+/* ---END JAM--- */
 /* ---LOGIN FORM--- */
 .login {
     position: absolute;
     width: 391px;
     height: 490px;
-    left: 460px;
-    top: 20px;
+    left: 530px;
+    top: 100px;
     box-shadow: 1px 1px 100px #129fc2;
     background: #ffffff;
     border-radius: 10px;
@@ -274,11 +300,11 @@ main .card .kehadiran .icon {
 #data-siswa {
     background-color: white;
     margin-top: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 10px;
 }
 .table-data {
-    margin-right: 50px;
+    margin-right: 20px;
     margin-left: 20px;
 }
 .table {
@@ -310,4 +336,20 @@ main .card .kehadiran .icon {
     border-radius: 10px;
 }
 /* ---Tambah data--- */
-/* ---Edit--- */
+/* ---ABSEN--- */
+.absen {
+    background-color: #e6e6e6;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.absen btn {
+    left: 100px;
+}
+/* ---EDIT--- */
+.edit {
+    width: 100%;
+    height: 100%;
+    background: #e6e6e6;
+    border-radius: 10px;
+}
