--- a/patch/style.css
+++ b/patch/style.css
@@ -341,7 +341,7 @@ main .card .kehadiran .icon {
 .absen {
     background-color: #e6e6e6;
     width: 100%;
-    height: 100%;
+    height: 400px;
     border-radius: 10px;
 }
 .absen btn {
